--- a/blocks/sites/top_bar/type_2/styles/top_bar_site_layout_style_t2.css
+++ b/blocks/sites/top_bar/type_2/styles/top_bar_site_layout_style_t2.css
@@ -64,7 +64,7 @@
 .site-container {
     max-width: 980px;
     margin: 0 auto;
-    background-color: var(--site-container-bg);
+    background-color: transparent;
     position: relative;
     border-radius: 22px;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
